kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anomaly-detection
  labels:
    app: anomaly-detection
    environment: to_be_kustomized
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anomaly-detection
  template:
    metadata:
      labels:
        app: anomaly-detection
    spec:
      containers:
      - name: anomaly-detection
        image: to_be_kustomized
        ports:
        - containerPort: 3000
      volumes:
      - name: anomaly-detection
        secret:
          secretName: anomaly-detection
