kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anomaly-detection
spec:
  selector:
    app: anomaly-detection
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
