kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anomaly-detection
  annotations:
    kubernetes.io/ingress.class: kong
    # Strip the path defined in Ingress resource and then forward the request to the upstream service.
    konghq.com/strip-path: "true"
spec:
  rules:
  - http:
      paths:
      - path: /anomaly-detection
        pathType: Prefix
        backend:
          service:
            name: anomaly-detection
            port: 
              number: 80
